[package]
name = "universal-sierra-compiler-cairo-lang-starknet-proxy"
version = "1.0.0"
edition = "2021"
readme = "README.md"
description = "A wrapper on cairo-lang-starknet crate set on version 1.0.0-rc0 for universal-sierra-compiler."
license = "MIT"

[dependencies]
cairo-lang-syntax = "=1.0.0-rc0"   # fixing a version of cairo-lang-starknet dependency
cairo-lang-starknet = "=1.0.0-rc0"
