[package]
name = "universal-sierra-compiler-cairo-lang-starknet-proxy"
version = "0.2.0"
edition = "2021"
readme = "README.md"
description = "A wrapper on cairo-lang-starknet crate set on version 1.0.0-rc0 for universal-sierra-compiler."
license = "MIT"

[dependencies]
cairo-lang-starknet = "=1.0.0-rc0"
# fixing versions of other necessary cairo-lang-... dependencies
cairo-lang-syntax = "=1.0.0-rc0"
cairo-lang-casm = "=1.0.0-rc0"
cairo-lang-diagnostics = "=1.0.0-rc0"
cairo-lang-filesystem = "=1.0.0-rc0"
cairo-lang-sierra = "=1.0.0-rc0"
cairo-lang-sierra-ap-change = "=1.0.0-rc0"
cairo-lang-sierra-gas = "=1.0.0-rc0"
cairo-lang-sierra-to-casm = "=1.0.0-rc0"
cairo-lang-utils = "=1.0.0-rc0"
